# python-karborclient

./: .gitignore  .gitreview  .zuul.yaml  README.rst  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
doc/source/specs/: karbor-support-in-python-openstackclient.rst
karborclient/: i18n.py
karborclient/common/: utils.py
karborclient/osc/v1/: checkpoints.py  plans.py  protectables.py  providers.py  restores.py  scheduled_operations.py  triggers.py
karborclient/tests/unit/: test_shell.py
karborclient/tests/unit/osc/v1/: test_checkpoints.py  test_plans.py  test_protectables.py  test_restores.py  test_scheduledoperations.py
karborclient/tests/unit/v1/: test_checkpoints.py  test_quota_classes.py  test_quotas.py
karborclient/v1/: checkpoints.py  client.py  restores.py  shell.py  triggers.py
smaugclient/common/: base.py  http.py  utils.py
smaugclient/openstack/common/apiclient/: base.py  fake_client.py
smaugclient/tests/unit/: base.py  test_smaugclient.py
smaugclient/tests/unit/v1/: test_plans.py  test_protectables.py
smaugclient/v1/: client.py  plans.py  protectables.py  shell.py
