[metadata]
name = python-karborclient
summary = Python client library for Karbor API
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = https://docs.openstack.org/developer/karbor/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    karborclient

[entry_points]
console_scripts =
    karbor = karborclient.shell:main

openstack.cli.extension =
    data_protection = karborclient.osc.plugin

openstack.data_protection.v1 =
    dataprotection_plan_list = karborclient.osc.v1.plans:ListPlans

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[wheel]
universal = 1
